RESOLVED FIXED18475
with right-to-left (RTL) layout, widgets on the web page are not shown properly
https://bugs.webkit.org/show_bug.cgi?id=18475
Summary with right-to-left (RTL) layout, widgets on the web page are not shown properly
Benjamin Meyer
Reported 2008-04-14 01:40:05 PDT
Launch the demo browser with -reverse option. Open a web site that contain combo boxes, e.g. aljazeera.net or facebook.com. Watch the wrong painting of the combo box.
Attachments
patch to fix the bug (1.20 KB, patch)
2009-04-27 05:33 PDT, Ariya Hidayat
no flags
Ariya Hidayat
Comment 1 2009-04-27 05:33:49 PDT
Created attachment 29818 [details] patch to fix the bug
Ariya Hidayat
Comment 2 2009-04-27 06:57:32 PDT
Holger Freyther
Comment 3 2009-05-11 03:35:07 PDT
Comment on attachment 29818 [details] patch to fix the bug Clear review to drop out of the review queue.
Note You need to log in before you can comment on or make changes to this bug.