2009-04-27  Ariya Hidayat  <ariya.hidayat@nokia.com>

Reviewed by Tor Arne Vestbø.

        https://bugs.webkit.org/show_bug.cgi?id=18475

        [Qt] Widget painting should follow the layout direction (LTR, RTL)
        of the element style, not the application layout direction.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::applyTheme):

Canonical link: https://commits.webkit.org/34937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42887 268f45cc-cd09-0410-ab3c-d52691b4dbfc